azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v3.0.0/Get-AzureRmExpressRouteCircuit.md
---
external help file: Microsoft.Azure.Commands.Network.dll-Help.xml
online version: e4b093a3-e235-44e9-98a9-15069e5a7b37
schema: 2.0.0
ms.assetid: 1369BDBF-25BC-496A-9DCD-4AEC7C5F4BF4
---

# Get-AzureRmExpressRouteCircuit

## SYNOPSIS

## SYNTAX

```
Get-AzureRmExpressRouteCircuit [-Name <String>] [-ResourceGroupName <String>] [<CommonParameters>]
```

## DESCRIPTION

## EXAMPLES

### 1:
```
PS C:\>
```

## PARAMETERS

### -Name
```yaml
Type: String
Parameter Sets: (All)
Aliases: ResourceName

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -ResourceGroupName
```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS


